[tool.poetry]
name = "handson-ml2"
version = "0.1.0"
description = ""
authors = ["J. Tipan Verella <tipan.verella@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scikit-learn = "^1.1.1"
pandas = "^1.4.2"
seaborn = "^0.11.2"
nltk = "^3.7"
jupyterlab = "^3.4.3"
scipy = "^1.8.1"
tqdm = "^4.64.0"
tensorboard = "^2.9.1"
tensorflow = "^2.9.1"
graphviz = "^0.20"
networkx = "^2.8.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
